--- a/demerit/config.yml
+++ b/demerit/config.yml
@@ -1,11 +1,10 @@
 grade_dir: "/Users/ianmcgaunn/submissions"
 demerit_dir: "/Users/ianmcgaunn/Documents/python/demerit/demerit"
+
+assign_name: "none"
 gen_makefile: true
 
 # input to be sent to program through stdin
 stdin: "swag"
-
 # input to be sent to program through argv
 argv: "sweg"
-
-
